# StaticHoster

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  push.ps1
src/: main.rs  webhook.rs
