[package]
name = "static-hoster"
version = "1.3.9"
edition = "2021"

[dependencies]
actix-web = { version = "4.0.0-beta.19", features = ["rustls"] }
env_logger = "0.9.0"
git2 = { version = "0.13.25", features = ["vendored-openssl", "vendored-libgit2"] }
log = "0.4.14"
mime_guess = "2.0.3"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
sled = "0.34.7"
